--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "appid": "scaffold",
   "use_closure": true,
-  "use_closure_templates": true
+  "use_closure_templates": true,
+  "use_closure_py_templates": true
 }
 
